//
//  AppMessages.swift
//  WeatherApp
//
//  Created by Ramnath Sridhar on 02/05/21.
//

import Foundation

enum AppMessages : String {
    case okString = "OK"
    case addFavouriteSuccessful = "Successfuly added as favorite"
    case successString = "Success"
    case searchWeather = "Search Weather"
    case favouriteCities = "Favorites"
    case maxTempIs = "Maximum temperature is"
    case minTempIs = "Minimum temperature is"
    case humidityIs = "Humidity is"
    case feelsLike = "Feels like"
    case sunriseExpectedAt = "Sunrise expected at"
    case sunsetExpectedAt = "Sunset expected at"
    case updatedAt = "Updated at :"
}
