//
//  AccessibilityIdentifers.swift
//  WeatherApp
//
//  Created by Ramnath Sridhar on 02/05/21.
//

import Foundation
struct AccessibilityIdentifers{
    static let cityNameTextField = "cityTextField"
    static let searchButton = "searchButton"
    static let addFavButton = "addFav"
    static let weatherInformationbackButton = "weatherInformationbackButton"
    static let searchTabBarButton = "searchTabBarButton"
    static let favouriteTabBarButton = "favouriteTabBarButton"
    static let favouritesTableView = "favouritesTableView"
    static let favouritesNavBarBackButton = "favouritesNavBarBackButton"
}
